# ChangeLog for kde-base/kdegraphics
# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/kde-base/kdegraphics/ChangeLog,v 1.142 2005/01/19 12:31:10 carlo Exp $

*kdegraphics-3.4.0_beta1-r1 (19 Jan 2005)

  19 Jan 2005; Carsten Lohrke <carlo@gentoo.org> +files/CAN-2005-0064.patch,
  +files/CAN-2005-0064_kde-3.4.patch, +kdegraphics-3.2.3-r4.ebuild,
  +kdegraphics-3.3.2-r2.ebuild, +kdegraphics-3.4.0_beta1-r1.ebuild:
  fix for xpdf makeFileKey2 stack overflow, #78619

  15 Jan 2005; Dan Armak <danarmak@gentoo.org>
  kdegraphics-3.4.0_beta1.ebuild:
  Added blocking dep on kde-misc/kgamma, an older version of an app now
  included here.

*kdegraphics-3.4.0_beta1 (14 Jan 2005)

  14 Jan 2005; Gregorio Guidi <greg@gentoo.org>
  +kdegraphics-3.4.0_beta1.ebuild:
  Introducing kde-3.4.0_beta1. Dependencies cleanup.

  09 Jan 2005; Sven Wegener <swegener@gentoo.org> kdegraphics-3.1.5.ebuild,
  kdegraphics-3.2.0.ebuild, kdegraphics-3.2.2.ebuild,
  kdegraphics-3.2.3-r1.ebuild, kdegraphics-3.2.3-r2.ebuild,
  kdegraphics-3.2.3-r3.ebuild, kdegraphics-3.2.3.ebuild,
  kdegraphics-3.3.0-r1.ebuild, kdegraphics-3.3.0-r2.ebuild,
  kdegraphics-3.3.0.ebuild, kdegraphics-3.3.1-r1.ebuild,
  kdegraphics-3.3.1-r2.ebuild, kdegraphics-3.3.1.ebuild,
  kdegraphics-3.3.2-r1.ebuild, kdegraphics-3.3.2.ebuild:
  Added missing parentheses in SRC_URI/*DEPEND/LICENSE.

  06 Jan 2005; Karol Wojtaszek <sekretarz@gentoo.org>
  kdegraphics-3.2.3-r3.ebuild:
  Stable on amd64, bug #75204

  04 Jan 2005; Guy Martin <gmsoft@gentoo.org> kdegraphics-3.3.2-r1.ebuild:
  Stable on hppa.

  29 Dec 2004; Bryan Østergaard <kloeri@gentoo.org>
  kdegraphics-3.3.2-r1.ebuild:
  Stable on alpha, bug 72750.

  29 Dec 2004; Ciaran McCreesh <ciaranm@gentoo.org> :
  Change encoding to UTF-8 for GLEP 31 compliance

  28 Dec 2004; Dylan Carlson <absinthe@gentoo.org>
  kdegraphics-3.3.2-r1.ebuild:
  Stable on amd64.
